--- a/admin/public/css/login.css
+++ b/admin/public/css/login.css
@@ -2,7 +2,7 @@ body{
     font-size:11px;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 23px;
-    background-color: blue;
+    background-color: #00c4ff;
 }
 h1.page-title{
     font-size:16px;
@@ -32,7 +32,7 @@ h1.page-title{
 #form-login #btn-login{
     display: block;
     width: 100%;
-    background-color: blue;
+    background-color: #00c4ff;
     border:none;
     color:white;
     padding:10px 0px;
