--- a/public/css/login.css
+++ b/public/css/login.css
@@ -2,7 +2,7 @@ body{
     font-size:11px;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 23px;
-    background-color: blue;
+    background-color: #00adffe3;
 }
 h1.page-title{
     font-size:16px;
@@ -16,10 +16,15 @@ h1.page-title{
     margin:150px auto;
     text-align: center;
 }
+#wp-form-login #home {
+    font-size: 20px;
+    padding-top: 0px;
+    float: right;
+}
 #form-login input{
     display: block;
 }
-#form-login #username,#form-login #password,#form-login #fullname,#form-login #email{
+#form-login #username, #form-login #password, #form-login #firstName, #form-login #email, #form-login #lastName, #form-login #phoneNumber, #form-login #address{
     display: block;
     padding:10px 0px;
     width: 100%;
