--- a/public/style.css
+++ b/public/style.css
@@ -10,4 +10,7 @@
 @import '../public/css/import/detail_blog.css';
 @import '../public/css/import/cart.css';
 @import '../public/css/import/checkout.css';
+@import '../public/css/import/list_post.css';
+@import '../public/css/import/info_account.css';
+@import '../public/css/import/change_pass.css';
 
