Update final code

--- a/admin/public/css/import/add_cat.css
+++ b/admin/public/css/import/add_cat.css
@@ -7,6 +7,13 @@
     width: 35%;
     margin-bottom: 15px;
 }
+.add-cat-page #detail-page .section-detail input[type="password"]{
+    display: block;
+    padding: 5px 10px;
+    border: 1px solid #ddd;
+    width: 35%;
+    margin-bottom: 15px;
+}
 .add-cat-page #detail-page .section-detail textarea{
     display: block;
     padding: 5px 10px;
