--- a/admin/public/style.css
+++ b/admin/public/style.css
@@ -9,3 +9,4 @@
 @import '../public/css/import/sidebar.css';
 @import '../public/css/import/menu.css';
 @import '../public/css/import/detail_order.css';
+@import '../public/css/import/dashboard.css';
