--- a/public/css/import/list_post.css
+++ b/public/css/import/list_post.css
@@ -36,6 +36,10 @@
     font-size: 18px;
     padding-left: 150px;
 }
+.view-order {
+    text-align: center;
+    color: red;
+}
 #list-cat li{ position: relative;}
 #list-cat li .icon{
     position: absolute;
@@ -80,7 +84,9 @@
     padding: 0px 5px;
     color: #ddd;
 }
-.list-table-wp tbody tr td:hover a{ color: #777;}
+.list-operation > li:hover > a {
+    color: #cf1c1c;
+}
 .tb-title{ 
     width: 75%;
     display: -webkit-box;
@@ -102,12 +108,21 @@
     color: #b5b5b5;
     font-style: italic;
 }
-#list-paging li{ float: left;}
+#list-paging li{
+    float: left;
+    padding: 5px;
+    margin-right: 5px;
+    background-color: #79c9e3;
+}
 #list-paging li a{
     display: inline-block;
-    color: #555;
+    color: white;
     font-size: 13px;
     padding: 0px 5px;
+}
+#list-paging li.active {
+    background-color: #36a2c5;
+    border: 1px grey solid;
 }
 #main-menu > li{ position: relative;}
 #main-menu .sub-menu{
